WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304410
[JSC] Error.isError(WebAssembly.Exception) should be `false`
https://bugs.webkit.org/show_bug.cgi?id=304410
Summary
[JSC] Error.isError(WebAssembly.Exception) should be `false`
Tetsuharu Ohzeki [UTC+9]
Reported
2025-12-18 07:25:19 PST
According to the spec discussion, the current `WebAssembly.Exception` does not have `[[ErrorData]]` semantically. So `Error.isError(WebAssembly.Exception)` should be `false`. -
https://github.com/WebAssembly/spec/issues/1914
-
https://webassembly.github.io/spec/js-api/#exceptions
Attachments
Add attachment
proposed patch, testcase, etc.
Tetsuharu Ohzeki [UTC+9]
Comment 1
2025-12-18 07:27:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55629
EWS
Comment 2
2025-12-23 18:24:47 PST
Committed
304917@main
(6376164b58fe): <
https://commits.webkit.org/304917@main
> Reviewed commits have been landed. Closing PR #55629 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-23 18:25:12 PST
<
rdar://problem/167110254
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug