[JSC] Error.isError(WebAssembly.Exception) should be `false` https://bugs.webkit.org/show_bug.cgi?id=304410

Reviewed by Yusuke Suzuki and Sosuke Suzuki.

According to the spec discussion, the current `WebAssembly.Exception` does not have `[[ErrorData]]` semantically.
So `Error.isError(WebAssembly.Exception)` should be `false`.

- https://github.com/WebAssembly/spec/issues/1914
- https://webassembly.github.io/spec/js-api/#exceptions

Test: JSTests/wasm/stress/exception-thrown-out-of-wasm-integration-error-is-error.js
* JSTests/wasm/stress/exception-thrown-out-of-wasm-integration-error-is-error.js: Added.
(import.Builder.from.string_appeared_here.import.as.assert.from.string_appeared_here.catch):
* Source/JavaScriptCore/wasm/js/JSWebAssemblyException.cpp:
(JSC::JSWebAssemblyException::createStructure):

Canonical link: https://commits.webkit.org/304917@main